[package]
name = "hvm-core-serialization"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitbuffer = "0.10.9"
hvm-core = { git = "https://github.com/HigherOrderCO/hvm-core", rev = "8a9a009a19313ce10b4f0b9532730ff99a02f703" }
serde = { version = "1.0.195", features = ["serde_derive"] }
