[package]
name = "hvm-core-serialization"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitbuffer = "0.10.9"
hvm = { git = "https://github.com/HigherOrderCO/HVM", rev = "b338dbd317db7756945a0aa3823fc2cb2eec91fd" }
serde = { version = "1.0.195", features = ["serde_derive"] }
